# math_dir

./: .gitignore  README.md  main.py  pyproject.toml  sim.py
iris_dataset/: notebook.ipynb
linear_regression/: lin_regr_notebook.ipynb
math_files/: data_structures.py  math_structures.py
utils/: data_structures.py  math_functions.py
